--- a/ex25.tex
+++ b/ex25.tex
@@ -1,10 +1,10 @@
 \chapter{Exercise 25: Variable Argument Functions}
 
-In C you can create your own versions of functions like \func{printf} by
-creating a "variable argument function".  These functions use the header
-\file{stdarg.h} and with them you can create nicer interfaces to your
-library.  They are handy for certain types of "builder" functions, formatting
-functions, and anything that takes variable arguments.
+In C you can create your own versions of functions like \func{printf} and
+\func{scanf} by creating a "variable argument function".  These functions use
+the header \file{stdarg.h} and with them you can create nicer interfaces to
+your library.  They are handy for certain types of "builder" functions,
+formatting functions, and anything that takes variable arguments.
 
 
 \section{What You Should See}
