Forgot the actual Makefile for ex26.

--- a/ex26.tex
+++ b/ex26.tex
@@ -147,6 +147,9 @@ When that's all done, you should have a \file{Makefile}, \file{README},
 A good place to start is the \file{Makefile} since this lays out 
 how things are built and what source files you'll be creating.
 
+\begin{code}{Makefile}
+<< d['code/ex26/Makefile|dexy'] >>
+\end{code}
 
 There's nothing in this that you haven't seen before, except maybe the strange
 \verb|?=| syntax, which says "set PREFEX equal to this unless PREFIS is already
