Forgot to lstlist it.

--- a/ex26.tex
+++ b/ex26.tex
@@ -148,7 +148,9 @@ A good place to start is the \file{Makefile} since this lays out
 how things are built and what source files you'll be creating.
 
 \begin{code}{Makefile}
+\begin{lstlisting}
 << d['code/ex26/Makefile|dexy'] >>
+\end{lstlisting}
 \end{code}
 
 There's nothing in this that you haven't seen before, except maybe the strange
