Fix 'hole pointers' -> 'hold pointers'

--- a/ex21.tex
+++ b/ex21.tex
@@ -114,7 +114,7 @@ for macros that return the maximum values of these types:
 \item[UINT\emph{N}\_MAX] Maximum positive number of unsigned integer of bits \emph{N}. Since it's unsigned the minimum is 0 and can't have a negative value.
 \end{description}
 
-There are also macros in \file{stdint.h} for sizes of the \ident{size\_t} type, integers large enough to hole pointers,
+There are also macros in \file{stdint.h} for sizes of the \ident{size\_t} type, integers large enough to hold pointers,
 and other handy size defining macros.  Compilers have to at least have these, and then they can allow
 other larger types.
 
