Fix spelling of PREFIX.

--- a/ex26.tex
+++ b/ex26.tex
@@ -154,7 +154,7 @@ how things are built and what source files you'll be creating.
 \end{code}
 
 There's nothing in this that you haven't seen before, except maybe the strange
-\verb|?=| syntax, which says "set PREFEX equal to this unless PREFIS is already
+\verb|?=| syntax, which says "set PREFIX equal to this unless PREFIX is already
 set".
 
 \section{The Source Files}
