Add an EC for the break.

--- a/ex13.tex
+++ b/ex13.tex
@@ -107,5 +107,7 @@ can bust it yourself.
     yet another \ident{for-loop}.
 \item Convert this \ident{switch-statement} to an \ident{if-statement}.
     Which do you like better?
+\item In the case for 'Y' I have the break outside the \ident{if-statement}. What's the impact of this
+    and what happens if you move it inside the \ident{if-statement}. Prove to yourself that you're right.
 \end{enumerate}
 
