fix grammar in ex4

--- a/ex4.tex
+++ b/ex4.tex
@@ -143,7 +143,7 @@ can apply it to all the later exercises.
 \begin{enumerate}
 \item Fix this program using \program{Valgrind} and the compiler as your guide.
 \item Read up on \program{Valgrind} on the internet.
-\item Download other software and built it by hand. Try something you already
+\item Download other software and build it by hand. Try something you already
     use but never built for yourself.
 \item Look at how the \program{Valgrind} source files are laid out in the
     source directory and read its Makefile.  Don't worry, none of that
