--- a/ex5.tex
+++ b/ex5.tex
@@ -34,7 +34,7 @@ Let's break this down line-by-line quickly, and then we can do
 exercises to understand each part better:
 
 \begin{description}
-\item[ex5.c:1] An \ident{include} and it is way to import the contents
+\item[ex5.c:1] An \ident{include} and it is the way to import the contents
     of one file into this source file.  C has a convention of using 
     \file{.h} extensions for "header" files, which then contain lists
     of functions you want to use in your program.
