Got these backwards in Ex21.

--- a/ex21.tex
+++ b/ex21.tex
@@ -174,10 +174,10 @@ operation.
 \item[/] divide.
 \item[+ (binary)] addition.
 \item[+ (unary)] positive number.
-\item[++ (postfix)] increment, then read.
-\item[++ (prefix)] read, then increment.
-\item[$--$ (postfix)] increment, then read.
-\item[$--$ (prefix)] read, then increment.
+\item[++ (postfix)] read, then increment.
+\item[++ (prefix)] increment, then read.
+\item[$--$ (postfix)] read, then decrement.
+\item[$--$ (prefix)] decrement, then read.
 \item[- (binary)] subtract.
 \item[- (unary)] negative number.
 \end{description}
