Add an extra credit for doing clean too.

--- a/ex3.tex
+++ b/ex3.tex
@@ -101,6 +101,8 @@ not cause it to crash on your computer:
     them in other languages (\ident{printf} is where they come from).
 \item Add \file{ex3} to your \file{Makefile}'s \ident{all} list.  Use this
     to \verb|make clean all| and build all your exercises so far.
+\item Add \file{ex3} to your \file{Makefile}'s \ident{clean} list as well.
+    Now use \verb|make clean| will remove it when you need to.
 \end{enumerate}
 
 
