Fix a sentence debacle.

--- a/introduction.tex
+++ b/introduction.tex
@@ -129,7 +129,7 @@ No matter what your background, you are probably bad at four skills:
     the code in this book it is wrong.
 
 \item[Planning And Debugging]  I love other easier languages because I can
-    just hang out type the ideas I have into their interpreter and see results.
+    just hang out. I type the ideas I have into their interpreter and see results immediately.
     They're great for just hacking out ideas, but have you noticed that if you
     keep doing "hack until it works" eventually nothing works?  C is harder on
     you because it requires you to plan out what you'll create first.  Sure,
