--- a/krcritique.tex
+++ b/krcritique.tex
@@ -116,7 +116,7 @@ programs that read from files, sockets, or other external resources.  It is a
 
 Before the switch to heap memory, this program probably ran just fine
 because the stack allocated memory will probably have a \verb|'\0'| character
-at the end on accident.  In fact, it would appear to run find almost always
+at the end on accident.  In fact, it would appear to run fine almost always
 since it just runs and exits quickly.
 
 What's the effect of running this new program with \ident{copy} used wrong?
