--- a/ex2.tex
+++ b/ex2.tex
@@ -109,7 +109,7 @@ automation tool.
 
 \begin{aside}{Did You Fix ex1.c?}
 If you fixed \file{ex1.c} to have \verb|#include <stdio.h>| then your
-output will not have the error about puts.  I have the error
+output will not have the warning (which should really be an error) about puts.  I have the error
 here because I didn't fix it.
 \end{aside}
 
