Fixed typo in text.

--- a/ex14.tex
+++ b/ex14.tex
@@ -25,7 +25,7 @@ Here's the breakdown:
 \item[ex14.c:17-30] Define the next function \func{print\_letters} that 
     is called \emph{by} \func{print\_arguments} and knows
     how to print each of the characters and their codes.
-\item[ex14.c:32-35] Define \func{can\_print\_int} which simply returns
+\item[ex14.c:32-35] Define \func{can\_print\_it} which simply returns
     the truth value (0 or 1) of \verb,isalpha(ch) || isblank(ch),
     back to its caller \func{print\_letters}.
 \item[ex14.c:38-42] Finally \func{main} simply calls \func{print\_arguments}
