Line numbering unecessary.

--- a/ex19.tex
+++ b/ex19.tex
@@ -30,11 +30,11 @@ on the text of the input file.  It's main advantage though is it can
 based on that file's contents.
 
 A quick way to see what the CPP does is take the last exercise and 
-run this:
+run this: 
 
-\begin{lstlisting}
+\begin{Verbatim}
 cpp ex18.c | less
-\end{lstlisting}
+\end{Verbatim}
 
 It will be a huge amount of output, but scroll through it and you'll see the
 contents of the other files you included with \verb|#include|.  Scroll down
