Fix from comments.

--- a/ex7.tex
+++ b/ex7.tex
@@ -73,6 +73,6 @@ breaking attempts.
     the number that makes that one too big.
 \item Go search online to find out what \ident{unsigned} does.
 \item Try to explain to yourself (before I do in the next exercise)
-    why you can multiple a \ident{char} and an \ident{int}.
+    why you can multiply a \ident{char} and an \ident{int}.
 \end{enumerate}
 
