Confusion about how to write out c types in English.

--- a/ex6.tex
+++ b/ex6.tex
@@ -42,9 +42,13 @@ of how they match up:
 \end{description}
 
 You'll notice that C makes a distinction between single-quote for \ident{char}
-and double-quote for \ident{char[]} or strings.  A short-hand way to write
-out a type, mostly because sometimes the variable name is in the middle, is
-to do like \ident{char[]} when we mean \ident{char SOMENAME[]}.
+and double-quote for \ident{char[]} or strings.
+
+
+\begin{aside}{C Type Short-Hand For English}
+When talking about C types, I will typically write in English char[] instead of the whole char SOMENAME[].
+This is not valid C code, just a simpler way to talk about types when writing English.
+\end{aside}
 
 \section{How To Break It}
 
